<resources>
    <string name="yes">Yes</string>
    <string name="confirm">Confirm</string>
    <string name="loading">Loading…</string>
    <string name="placeholder_name">Name*</string>
    <string name="placeholder_surname">Surname</string>
    <string name="placeholder_username">User name</string>
    <string name="placeholder_password">Password</string>
    <string name="title_updatebirthday">Update your birthday</string>
    <string name="search">Search</string>
    <string name="friends">Friends</string>
    <string name="add_wish">Add a wish</string>
    <string name="home">Home</string>
    <string name="profile">My profile</string>
    <string name="add_friend">Add a new friend</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit my profile</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact with us</string>
    <string name="edit_wish">Edit this wish</string>
    <string name="login">Login</string>
    <string name="network_error">A mistake has occurred. Please, try again later</string>
    <string name="operation_ok">Operation carried out correctly</string>
    <string name="network_down">You can not connect to the server. Please, check your connection.</string>
    <string name="network_down_timeout">Waiting time exceeded. Please, check your connection.</string>
    <string name="error_email">You must enter a correct email address</string>
    <string name="error_pass">Fields cannot be empty</string>
    <string name="password_forgotten">I forgot my <b>password</b></string>
    <string name="continue_no_register">Continue without register</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="logout_confirmed">You have logged out correctly from <b>The Giftcher™</b></string>
    <string name="error_pass_not_equals">Both passwords must be equals</string>
    <string name="placeholder_repeat_password">Repeat password</string>
    <string name="accept_policy_privacy">By clicking "Confirm", I accept the <b>Terms and Conditions</b> of the service and the <b>Privacy Policy</b></string>
    <string name="register">Register</string>
    <string name="addfriend_searchbar_placeholder">Search new friends writing here an username.</string>
    <string name="addfriend_searchbar_explanation">⬆     Find another friends writing their usernames on the searchbar and send a friend request.</string>
    <string name="addproduct_placeholder_shop">Shop*</string>
    <string name="addproduct_placeholder_online_shop">Url o dirección web de la tienda</string>
    <string name="addproduct_placeholder_price">Price*</string>
    <string name="addproduct_placeholder_description">Product description*</string>
    <string name="addproduct_button_save">Save</string>
    <string name="addproduct_button_associate">Associate</string>
    <string name="contactus_title">Contact us.</string>
    <string name="contactus_placeholder_name">Name.</string>
    <string name="contactus_placeholder_email">Email</string>
    <string name="contactus_placeholder_subject">Subject</string>
    <string name="contactus_placeholder_message">Write here all you want to tell us</string>
    <string name="contactus_button_send">Send</string>
    <string name="editpass_placeholder_previouspass">Previous password</string>
    <string name="editpass_placeholder_newpass">New password</string>
    <string name="editpass_placeholder_repeatnewpass">Repeat new password</string>
    <string name="editpass_button_save">Save changes</string>
    <string name="editprofile_button_changepass">Change</string>
    <string name="editprofile_switch_public">Change my profile to Public</string>
    <string name="editprofile_button_save">Save</string>
    <string name="friends_searchbar_placeholder">Search to anyone between your friendlist</string>
    <string name="help_button_tutorial_seeagain">See again the tutorial</string>
    <string name="help_button_faq">FAQ (see on the web)</string>
    <string name="help_button_contactus">Contact us</string>
    <string name="delete_account_button">Delete account</string>
    <string name="home_subtitle">Custom lists adapted to your personal preferences.</string>
    <string name="likes_title">Choose your personal preferences</string>
    <string name="likes_checkbox_videogames">Videogames</string>
    <string name="likes_checkbox_home">Home</string>
    <string name="likes_checkbox_motor">Motor</string>
    <string name="likes_checkbox_homeappliances">House appliances</string>
    <string name="likes_checkbox_fashion">Fashion</string>
    <string name="likes_checkbox_garden">Gardening</string>
    <string name="likes_checkbox_tv">TV</string>
    <string name="likes_checkbox_music">Music</string>
    <string name="likes_checkbox_photo">Photography</string>
    <string name="likes_checkbox_mobile">Mobile phones</string>
    <string name="likes_checkbox_computing">Computing</string>
    <string name="likes_checkbox_sports">Sports</string>
    <string name="likes_checkbox_books">Books</string>
    <string name="likes_checkbox_childs">Kids &amp; Babies</string>
    <string name="likes_checkbox_farming">Farming</string>
    <string name="likes_checkbox_services">Services</string>
    <string name="likes_checkbox_collectibles">Collectibles</string>
    <string name="likes_checkbox_masonry">Building and masonry</string>
    <string name="likes_checkbox_others">Other products</string>
    <string name="likes_button_continue">Continue</string>
    <string name="search_placeholder">Search for products within The Giftcher™</string>
    <string name="settings_button_editprofile">Edit my profile</string>
    <string name="settings_button_termscond">Terms &amp; Condition agreement</string>
    <string name="settings_button_privacypolicy">Privacy policy</string>
    <string name="settings_button_help">Help</string>
    <string name="frienddetail_title_birthday">Birthday</string>
    <string name="frienddetail_title_wishlist">Wishlist</string>
    <string name="frienddetail_title_associatelist">Gifts associates</string>
    <string name="productdetail_button_update">Actualizar</string>
    <string name="productdetail_button_delete">Eliminar</string>
    <string name="productdetail_button_gotoweb">Ir a la web</string>
    <string name="tutorial_1">Allévoy</string>
    <string name="tutorial_2">Allévoy2</string>
    <string name="tutorial_3">Allévoy3</string>
    <string name="tutorial_4">Allévoy4</string>
    <string name="tutorial_5">Allévoy5</string>
    <string name="tutorial_6">Allévoy6</string>
    <string name="tutorial_7">Allévoy7</string>
    <string name="tutorial_8">Allévoy8</string>
    <string name="tutorial_9">Allévoy9</string>
    <string name="app_name" translatable="false"><b>THE GIFTCHER</b></string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="no" translatable="false">No</string>
    <string name="sample" translatable="false">Sample test</string>
    <string name="placeholder_email" translatable="false">Email</string>
    <string name="editprofile_placeholder_passwordtextbox" translatable="false">********</string>
    <string name="home_button_moreinfo" translatable="false">+ info</string>
    <string name="error_processing_places_api" translatable="false">Error processing Places API URL.</string>
    <string name="error_connecting_to_places_api" translatable="false">Error connecting to Places API.</string>
    <string name="error_cannot_process_json_results" translatable="false">Cannot process JSON results.</string>
    <string name="error_lib_not_initialized" translatable="false">Please, initialize the API before using it.</string>
</resources>