<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_loupe"
        android:title="@string/search"/>

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_desire"
        android:title="@string/add_wish" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_brain"
        android:title="@string/profile" />

</menu>
