<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactus_title"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputUsernameLayout"
            style="@style/MyOutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/colorDetail"
            app:boxStrokeColor="@color/colorDetail"
            app:hintTextColor="@color/colorDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialTextView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contactus_placeholder_name"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            style="@style/MyOutlinedBox.Dense"
            android:textColorHint="@color/colorDetail"
            app:boxStrokeColor="@color/colorDetail"
            app:hintTextColor="@color/colorDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputUsernameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_email"
                android:textSize="18sp"
                android:inputType="text"
                android:textColor="@color/colorSecondary"  />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputSubjectLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            style="@style/MyOutlinedBox.Dense"
            android:textColorHint="@color/colorDetail"
            app:boxStrokeColor="@color/colorDetail"
            app:hintTextColor="@color/colorDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contactus_placeholder_subject"
                android:textSize="18sp"
                android:inputType="text"
                android:textColor="@color/colorSecondary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmailBodyLayout"
            style="@style/MyOutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/colorDetail"
            app:boxStrokeColor="@color/colorDetail"
            app:hintTextColor="@color/colorDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputSubjectLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmailBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:gravity="top"
                android:hint="@string/contactus_placeholder_message"
                android:inputType="textMultiLine"
                android:lines="10"
                android:maxLines="20"
                android:minLines="10"
                android:singleLine="false"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSendEmail"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorDetail"
            android:text="@string/contactus_button_send"
            android:textColor="@color/white_gray"
            android:textSize="18sp"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmailBodyLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>